--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Welcome</h2>
                         <p class="text-white-50">
-                            Your "about me" blurb goes here!
+                            Quick-learning and hardworking student, who wants to help people understand and protect 
+themselves online. Proficient in: Python and Java, experience with: HTML/CSS and Javascript.  
                         </p>
                     </div>
                 </div>
@@ -73,33 +74,28 @@
                             <i> Hartford Area Career and Technology Center, 2025</i>
                             <br>
                             <br>
-                            <b>Degree</b>
+                            <b>High School Diploma</b>
                             <br>
-                            <i> School, Year</i>
+                            <i> Hartford High School, 2026</i>
                         </p>
                         <h2 class="mb-4">Experience</h2>
-                        <h5>Job title</h5>
+                        <h5>Dartmouth College Internship</h5>
                         <p class="text-black-50">
-                            <i> Business or organization, years</i>
-                            <br>
-                            One-sentence description of what you did there.
-                        </p>
-                        <h5>Job title</h5>
-                        <p class="text-black-50">
-                            <i> Business or organization, years</i>
+                            <i> Dartmouth College Research Computing, 2025</i>
                             <br>
                             One-sentence description of what you did there.
                         </p>
                         <h2 class="mb-4">Certifications</h2>
                         <p class="text-black-50">
-                            <b>Certification One</b>
-                            <br>
-                            <b>Certification Two</b>
+                            <b>Advanced Duckyscript, Hak5</b>
+                        </p>
+                        <p class="text-black-50">
+                            <b>ACT WorkKeys NCRC Platinum</b>
                         </p>
                     </div>
                 </div>
                 <!--Replace with filename of your resume-->
-                <a href="assets/other/Your_Resume.pdf">Full resume</a>
+                <a href="assets/other/Lucas_Resume.pdf">Full resume</a>
             </div>
         </section>
         
@@ -114,7 +110,7 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="https://placehold.co/800x600"/></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Featured item</h4>
+                            <h4>Messaging App</h4>
                             <p class="text-black-50 mb-0">Short description of featured item.</p>
                         </div>
                     </div>
@@ -144,7 +140,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Third Item</h4>
+                                    <h4 class="text-white">Quicksort</h4>
                                     <p class="mb-0 text-white-50">Short description of third item.</p>
                                 </div>
                             </div>
@@ -165,14 +161,14 @@
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
                                 <!--Update with your email-->
-                                <div class="small text-black-50"><a href="mailto: account@site.domain">account@site.domain</a></div>
+                                <div class="small text-black-50"><a href="mailto: prignanol@proton.me">prignanol@proton.me</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
                     <!--Update with your GitHub-->
-                    <a class="mx-2" href="https://github.com/"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://github.com/lprignano"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
@@ -242,11 +238,16 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Third Item</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Quicksort</h2>
                                     <!-- Portfolio Modal - Image-->
                                     <img src="https://placehold.co/600x400" class="figure-img img-fluid rounded">
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Longer description of third item</p>
+                                    <p class="mb-4">I wrote this program to run two ways. It could run through command prompt using command line arguments, or through a GUI. 
+                                        The GUI has an entry box that would search for a file of the inputted name in the same folder, or follow an inputted path. 
+                                        It also has a browse button that opens your file explorer and allows you to select the file and it automatically enters the path into the entry box. 
+                                        After pressing “Sort!”, it would then read and sort the file using the quicksort algorithm; it can read a single line with each number separated by a space, 
+                                        or one number per line. It would then overwrite the text in the same style it was inputted and return the time it took to sort.
+                                    </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -264,7 +265,7 @@
         <footer class="footer bg-black small text-center text-white-50">
             <div class="container px-4 px-lg-5">
                 <p>Modified from the <a href="https://startbootstrap.com/theme/grayscale">grayscale</a> theme by Start Bootstrap under an <a href="https://github.com/StartBootstrap/startbootstrap-grayscale/blob/master/LICENSE">MIT License</a> </p>
-                <p>Copyright &copy; Your Name, <script>document.write(/\d{4}/.exec(Date())[0])</script></p>
+                <p>Copyright &copy; Lucas Prignano, <script>document.write(/\d{4}/.exec(Date())[0])</script></p>
             </div>
         </footer>
         <!-- Bootstrap core JS-->
