--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Lucas Prignano</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Aspiring Cybersecuruty Student</h2>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Aspiring Cybersecurity Student</h2>
                         <a class="btn btn-primary" href="#about">About Me</a>
                     </div>
                 </div>
